<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background">

    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_article_image"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <EditText
                android:id="@+id/etv_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/article_title" />

            <EditText
                android:id="@+id/etv_article_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/article_short_description" />

            <EditText
                android:id="@+id/etv_article_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/article_text" />

            <Button
                android:id="@+id/btn_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>