<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/design_default_color_background"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etv_event_topic"
        android:hint="@string/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etv_event_location"
        android:hint="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etv_event_description"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_organizers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="Start Time"
        android:id="@+id/btn_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="End Time"
        android:id="@+id/btn_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="Publish"
        android:id="@+id/btn_publish_new_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>