<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/member_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_member_thumbnail"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/first_name"
        android:id="@+id/tv_first_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_member_thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@id/iv_rating_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_first_name_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/last_name"
        android:id="@+id/tv_last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_member_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@id/iv_rating_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/email"
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_member_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@id/iv_rating_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_first_name_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

    <ImageView
        android:background="@color/colorPrimaryDark"
        android:src="@android:drawable/star_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/iv_rating_bar"
        android:layout_width="32dp"
        android:layout_height="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>