<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/article_item_layout"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_article_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_article_thumbnail"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_title"/>

    <TextView
        android:text="@string/description"
        android:id="@+id/tv_article_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_article_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_title"/>

    <TextView
        android:id="@+id/tv_article_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_article_description_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_title" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/author"
        android:id="@+id/tv_author_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_article_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_description" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_author_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_description" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/publish_date"
        android:id="@+id/tv_publish_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_article_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:id="@+id/tv_publish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_publish_date_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

</androidx.constraintlayout.widget.ConstraintLayout>